manifest/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colorteller
  namespace: default
spec:
  hosts:
  - "colorteller.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: colorteller
        subset: stable
        port:
          number: 8080
      weight: 20
    - destination:
        host: colorteller
        subset: canary
        port:
          number: 8080
      weight: 80
